<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    tools:ignore="HardcodedText">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:textStyle="italic" />

            <EditText
                android:inputType="text"
                android:id="@+id/campItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:hint="@string/hint_item"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/campItem"
                android:inputType="number"
                android:hint="@string/hint_qty"
                tools:ignore="LabelFor" />

            <EditText
                android:inputType="text"
                android:id="@+id/itemColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemQuantity"
                android:hint="@string/hint_color"
                tools:ignore="LabelFor" />

            <EditText
                android:inputType="number"
                android:id="@+id/itemSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemColor"

                tools:ignore="LabelFor,TextFields"
                android:hint="@string/hint_size" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemSize"
                android:background="@android:color/holo_green_light"
                android:text="@string/save_button"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>

